cmake_minimum_required(VERSION 3.1 FATAL_ERROR)
project(app VERSION 0.0.1 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -pedantic")

add_executable(${PROJECT_NAME} ${PROJECT_NAME}.cc)


if (RUMPRUN_PLATFORM)
	add_custom_command(TARGET ${PROJECT_NAME}
		POST_BUILD
		COMMAND rumprun-bake ${RUMPRUN_PLATFORM} ${PROJECT_NAME}.bin ${PROJECT_NAME}
		WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
		COMMENT "baking ${PROJECT_NAME}.bin for ${RUMPRUN_PLATFORM}")
endif()
